--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <h2>Acerca de mi</h2>
 
-            <p><b style="color: aliceblue;">Perdon no consegui mi foto de carnet</b> sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+            <p>Sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
             eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
             voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
             voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
